# batmonic

./: Cargo.toml  batmonic-4e3ed472c8a6bc1b.js  index.html  style.css
.github/workflows/: release.yml
src/: annotations.rs  file_identity.rs  focus_stack.rs  format_time.rs  lib.rs  opfs.rs  state.rs  tauri_bridge.rs  viewport.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cmd_annotations.rs  cmd_audio_files.rs  cmd_mic.rs  cmd_noise_presets.rs  cmd_playback.rs  cmd_usb.rs  lib.rs  recording.rs
src/audio/: export.rs  guano.rs  live_recording.rs  loader.rs  mic_backend.rs  microphone.rs  mod.rs  playback.rs  source.rs  streaming_m4a.rs  streaming_mp3.rs  streaming_ogg.rs  streaming_playback.rs  streaming_source.rs  video_export.rs  wav_encoder.rs
src/bat_book/: auto_resolve.rs  country_map.rs  data.rs  mod.rs  species.rs  types.rs
src/canvas/: flow.rs  freq_adjustments.rs  gutter_renderer.rs  hit_test.rs  live_waterfall.rs  mod.rs  overlays.rs  spectral_store.rs  spectrogram_renderer.rs  tile_blit.rs  tile_cache.rs  tile_scheduler.rs  waveform_renderer.rs
src/components/: analysis_panel.rs  app.rs  bat_book_ref_panel.rs  bat_book_strip.rs  bottom_toolbar.rs  chromagram_view.rs  combo_button.rs  debug_panel.rs  display_filter_button.rs  gutter.rs  hfr_button.rs  inertia.rs  mod.rs  overflow_menu.rs  overview.rs  pinch.rs  play_controls.rs  playhead.rs  right_sidebar.rs  spectrogram.rs  toolbar.rs  (+4 more)
xc-cli/: Cargo.toml
xc-cli/src/: main.rs
xc-lib/: Cargo.toml
(+23 files in other folders)
